--- a/kubespray/app/helm/templates/service.yaml
+++ b/kubespray/app/helm/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: backend-probe
+  name: {{ .Release.Name }}-svc
   labels:
     app: backend-probe
 spec:
